[package]
name = "husk"
version = "0.1.0"
authors = ["zkonge@outlook.com"]
edition = "2021"

[dependencies]
num = "^0.4"
enum_primitive = "^0.1"
rand = { version = "^0.8", features = ["getrandom"] }
primit = { path = "../primit" }

[profile.release]
opt-level = "z"
panic = "abort"
strip = "symbols"
